# Ares

./: .coveragerc  .dockerignore  .dvcconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARES_AGENT_INSTRUCTIONS.md  CHANGELOG.md  COMPLETION_REPORT.md  COMPLETION_REPORT_V2.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE_1_COMPLETION_CHECKLIST.md  Production_grade_final_plan.md  README.md  SECURITY.md  alembic.ini  ares.config.yaml  cosmic-ray.toml  coverage_report.txt  docker-compose.ci.yml  docker-compose.ci.yml.bak  docker-compose.yml  dvc.yaml  make.cmd  plan.md  pyproject.toml  test_output.txt
.cursor/plans/: ares_finalization_(minimal-change)_f73f1fc7.plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  evaluator_proposal.md  feature_request.md
.github/workflows/: build-eval-image.yml  deployment.yml  drift_monitor.yml  performance.yml  quality.yml  regression_gate.yml  security.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_mlflow_status_fields.py  0003_add_api_keys_table.py  0004_add_mlflow_error_category.py  0005_add_webhooks_table.py  0006_operational_lifecycle_tables.py  0007_phase2_product_completeness.py  120cb49ea4a3_add_audit_logs_table.py
ares/: config.py  drift_sources.py  exceptions.py  golden_set.py  logging.py  model_cards.py
ares/alerting/: __init__.py
ares/api/: auth.py  limiting.py  main.py  presenters.py
ares/cache/: __init__.py  client.py  keys.py
ares/cli/: thresholds.py
ares/db/: crud.py  crud_api_keys.py  crud_webhooks.py  health.py  session.py
ares/drift/: contracts.py  runner.py
ares/evaluators/: base.py  classification.py  detection.py  distributed.py  mlflow_integration.py  plugins.py  regression.py
ares/features/: __init__.py  flags.py
ares/gate/: decision.py  plugins.py  rules_engine.py  threshold_optimizer.py
ares/metrics/: drift.py  significance.py  slice_analysis.py
ares/models/: __init__.py  alert_event.py  api_key.py  audit_log.py  champion_rollback.py  drift_job.py  drift_report.py  evaluation_run.py  model_champion.py  production_prediction.py  slice_metric_point.py  webhook.py
ares/notifier/: github_pr.py  slack.py  webhook.py
ares/observability/: metrics.py  telemetry.py
ares/plugins/: evaluators.py
ares/scheduler/: __init__.py  drift_scheduler.py  maintenance_scheduler.py
ares/worker/: event_workflow.py  tasks.py
ares_client/: __init__.py  client.py
dashboard/: CHANGES.md  __init__.py  api_client.py  app.py
dashboard/components/: charts.py  connection_status.py  operator_state.py  real_time_metrics.py  state_handlers.py
dashboard/pages/: 01_leaderboard.py  02_drill_down.py  03_drift_monitor.py  04_model_comparison.py  05_promotion_workflow.py  06_alerts.py  __init__.py
data/golden_set/: test.csv  train.csv  val.csv
data/sample_predictions/: default-model_predictions.csv
data/schemas/: data_contract.json
deploy/observability/: grafana-dashboard.json  prometheus-rules.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.eval  Dockerfile.worker  entrypoint.api.sh
docs/: agent-workflow.md  api-client-guide.md  api_client.md  backup-restore-runbook.md  backup-restore.md  configuration-tuning-guide.md  dashboard-operator-guide.md  dashboard-qa-results.md  deployment-guide.md  evaluator-plugin-authoring.md  event-workflow-guide.md  gate-plugin-guide.md  implementation-complete.md  kubernetes-deployment.md  migration-policy.md  migration-rollback.md  model-card-guide.md  mutation-test-results.md  observability-guide.md  performance-baseline.md  phase0-production-baseline.md  phase1-operations-guide.md  phase3-engineering-plan-review.md  phase4-ceo-review.md  phase4-engineering-review.md  plugin-authoring-guide.md  screenshots.md  secrets-guide.md  security-guide.md  security-hardening-guide.md  slice-monitoring-guide.md  testing-coverage-plan.md  threshold-optimization-guide.md  troubleshooting.md
docs/adr/: 001-streamlit-dashboard.md  002-helm-production-deployment.md
docs/architecture/: README.md
docs/contributing/: data-engineer.md  evaluator-author.md  gate-author.md  operator.md
docs/release/: phase4-final-gates.md
docs/runbooks/: operator-incident-response.md
evidence/: model_a_run.json  model_b_run.json  real_adult_eval.db  real_adult_eval_final.db  real_adult_eval_review.db  real_evaluation_proof.json
graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_finalize.py  .graphify_finalize2.py  .graphify_labels.json  .graphify_post.py  .graphify_run_ast.py  GRAPH_REPORT.md  cost.json  graph.html  manifest.json  temp_detect_summary.py  temp_top_dirs.py
graphify-out/core/: .graphify_ast.json  (+4 more)
models/: candidate.json  candidate_A.joblib  candidate_B.joblib
reports/: security-grep-raw.txt  security-grep-summary.md  security-grep-summary.txt
scripts/: backup.py  compare_models.py  manage_api_keys.py  optimize_thresholds.py  pin_golden_checksums.py  real_adult_head_to_head.py  restore.py  rollback.py  run_adult_income_evaluation.py  run_drift_check.py  run_evaluation.py  seed_champion.py  seed_demo_data.py  seed_golden_set.py  start_demo.py  validate_k6_summary.py  verify_repo.py
tests/: ares_test.db  conftest.py
(+110 files in other folders)
