[project]
name = "ares"
version = "1.0.0"
description = "Model Regression Detection System"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ares Contributors" }]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "sqlalchemy[asyncio]>=2.0.29",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.4.0",
  "celery[redis]>=5.3.6",
  "redis[hiredis]>=5.0.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "slowapi>=0.1.9",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.33.0", "plotly>=5.21.0"]
eval = ["mlflow>=2.12.0", "dvc[s3]>=3.49.0", "deepchecks>=0.18.0", "evidently>=0.4.0"]
dev = ["build>=1.0.0", "pytest>=8.1.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "pytest-xdist>=3.6.0", "pytest-benchmark>=4.0.0", "fakeredis>=2.20.0", "ruff>=0.4.0", "mypy>=1.9.0", "pre-commit>=3.7.0", "types-PyYAML>=6.0.12", "hypothesis>=6.100.0", "cosmic-ray>=8.3", "pytest-timeout>=2.3.0"]
otel = ["opentelemetry-api>=1.24.0", "opentelemetry-sdk>=1.24.0", "opentelemetry-exporter-otlp>=1.24.0", "opentelemetry-instrumentation-fastapi>=0.45b0"]

[project.entry-points."ares.gate_plugins"]
default = "ares.gate.plugins:DefaultGatePlugin"

[project.scripts]
ares-optimize-thresholds = "ares.cli.thresholds:main"

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=ares --cov-config=.coveragerc --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests requiring database integration",
  "e2e: marks end-to-end workflow tests",
  "performance: marks performance and benchmark tests",
  "serial: marks tests that must not run in parallel"
]

[tool.setuptools.packages.find]
include = ["ares*", "ares_client*", "dashboard*"]
exclude = ["skills*", "data*", "docker*", "tests*", "alembic*", "reports*", "docs*"]

[tool.ruff]
line-length = 100
extend-exclude = ["skills", ".claude", ".venv", "alembic/versions", "graphify-out"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["ASYNC240"]
"scripts/run_adult_income_evaluation.py" = ["ASYNC240"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/", "tests/"]
disable_error_code = ["misc", "assignment", "arg-type"]
